fix hard to read font on yellow button

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,6 +106,7 @@ p, span, a, i {
 }
 .y {
   background-color: #ffed00 !important;
+  color: #272726 !important;
 }
 
 /* === HEADER ===*/
